# SimpleMidi

./: .gitignore  CMakeLists.txt  README.md  SimpleMidi.cpp  audio.cpp  audio.h  build.bat  go.sh  inst-dx7.cpp  inst-mt32.cpp  inst-piano.cpp  inst-piano.h  instrument.h  midi.cpp  midi.h  misc.cpp  misc.h
Imgui/: CMakeLists.txt
msfa/: CMakeLists.txt  dx7.cpp
